# 3DEngine

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: outline.frag  outline.vert  phongLighting.frag  phongLighting.vert
resources/shaders/Post Processing/: base.frag  negative.frag  negative.vert
src/: Camera.cpp  Camera.h  Dragon.h  Engine.cpp  Engine.h  Light.cpp  Light.h  LoadedObj.cpp  LoadedObj.h  LoaderObj.cpp  LoaderObj.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  main.cpp  stb_image.h  tiny_obj_loader.h
src/Helpers/: FileHelper.cpp
test/: Readme.txt
test/resources/shaders/: myShader.frag  myShader.vert  phongLighting.frag
